--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </li>
         <li class="sidebar-title"><span>功能選單</span></li>
         <li class="sidebar-list">
-          <a href="#">統計分析 <span class="menu-icon fa fa-tachometer"></span></a>
+          <a href="#/{{churchData.qlink}}">統計分析 <span class="menu-icon fa fa-tachometer"></span></a>
         </li>
         <li class="sidebar-list">
           <a href="#/{{churchData.qlink}}/tables">代禱對象 <span class="menu-icon fa fa-table"></span></a>
