新增其他資訊

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         <li class="sidebar-list">
           <a href="#/{{churchData.qlink}}/tables">代禱對象 <span class="menu-icon fa fa-table"></span></a>
         </li>
+        <li class="sidebar-list">
+          <a href="#/{{churchData.qlink}}/info">其他資訊 <span class="menu-icon fa fa-info-circle"></span></a>
+        </li>
       </ul>
       <div class="sidebar-footer">
         <div class="col-xs-4">
