--- a/index.html
+++ b/index.html
@@ -78,62 +78,12 @@
         <!-- Header Bar -->
         <div class="row header">
           <div class="col-xs-12">
-            <!--
-            <div class="user pull-right">
-              <div class="item dropdown">
-                <a href="#" class="dropdown-toggle">
-                  <img src="img/avatar.jpg">
-                </a>
-                <ul class="dropdown-menu dropdown-menu-right">
-                  <li class="dropdown-header">
-                    Joe Bloggs
-                  </li>
-                  <li class="divider"></li>
-                  <li class="link">
-                    <a href="#">
-                      Profile
-                    </a>
-                  </li>
-                  <li class="link">
-                    <a href="#">
-                      Menu Item
-                    </a>
-                  </li>
-                  <li class="link">
-                    <a href="#">
-                      Menu Item
-                    </a>
-                  </li>
-                  <li class="divider"></li>
-                  <li class="link">
-                    <a href="#">
-                      Logout
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <div class="item dropdown">
-               <a href="#" class="dropdown-toggle">
-                  <i class="fa fa-bell-o"></i>
-                </a>
-                <ul class="dropdown-menu dropdown-menu-right">
-                  <li class="dropdown-header">
-                    通知
-                  </li>
-                  <li class="divider"></li>
-                  <li>
-                    <a href="#">伺服器狀態正常</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            -->
             <div class="meta">
               <div class="page">
                 {{churchData.name}}
               </div>
               <div class="breadcrumb-links">
-                複製本頁網址：http://1and1.ccea.org.tw/dash/{{qlink}}
+                複製本頁網址：http://1and1.ccea.org.tw/dash/d/#/{{qlink}}
               </div>
             </div>
           </div>
