hide sidebar-footer and change breadcrumb-links font-family

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a ng-href="#/{{qlink}}/info">其他資訊 <span class="menu-icon fa fa-info-circle"></span></a>
         </li>
       </ul>
-      <div class="sidebar-footer">
+      <!--<div class="sidebar-footer">
         <div class="col-xs-4">
           <a href="#">
             <p class="btn btn-xs btn-info">
@@ -69,6 +69,7 @@
           </a>
         </div>
       </div>
+      -->
     </div>
     <!-- End Sidebar -->
 
